@@ -17,8 +17,18 @@ import com.cohort.util.String2;
 import dods.dap.parser.ParseException;
 import gov.noaa.pfel.coastwatch.util.SSR;
 import gov.noaa.pfel.erddap.util.EDStatic;
-import java.io.*;
-import java.net.*;
+import java.io.ByteArrayInputStream;
+import java.io.ByteArrayOutputStream;
+import java.io.DataInputStream;
+import java.io.FileNotFoundException;
+import java.io.IOException;
+import java.io.InputStream;
+import java.io.OutputStream;
+import java.net.HttpURLConnection;
+import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URL;
+import java.net.URLConnection;
 import java.util.zip.InflaterInputStream;
 
 /**
@@ -104,7 +114,7 @@ public class DConnect {
     // Test if the URL is really a filename, and if so, open the file
     try {
       @SuppressWarnings("unused")
-      URL unusedTestURL = new URL(urlString);
+      URL unusedTestURL = URI.create(urlString).toURL();
     } catch (MalformedURLException e) {
       try {
         fileStream = File2.getDecompressedBufferedInputStream(urlString);
@@ -116,7 +126,7 @@ public class DConnect {
     EDStatic.cleaner.register(this, new CleanupConnect(fileStream));
   }
 
-  private static class CleanupConnect implements Runnable {
+  private static final class CleanupConnect implements Runnable {
 
     private final InputStream inputStream;
 
@@ -166,39 +176,6 @@ public class DConnect {
   public DConnect(InputStream is) {
     this.fileStream = is;
     EDStatic.cleaner.register(this, new CleanupConnect(fileStream));
-  }
-
-  /**
-   * Returns whether a file name or <code>InputStream</code> is being used instead of a URL.
-   *
-   * @return true if a file name or <code>InputStream</code> is being used.
-   */
-  public final boolean isLocal() {
-    return (fileStream != null);
-  }
-
-  /**
-   * Returns the constraint expression supplied with the URL given to the constructor. If no CE was
-   * given this returns an empty <code>String</code>.
-   *
-   * <p>Note that the CE supplied to one of this object's constructors is "sticky"; it will be used
-   * with every data request made with this object. The CE passed to <code>getData</code>, however,
-   * is not sticky; it is used only for that specific request. This method returns the sticky CE.
-   *
-   * @return the constraint expression associated with this connection.
-   */
-  public final String CE() {
-    return projString + selString;
-  }
-
-  /**
-   * Returns the URL supplied to the constructor. If the URL contained a constraint expression that
-   * is not returned.
-   *
-   * @return the URL of this connection.
-   */
-  public final String URL() {
-    return urlString;
   }
 
   /**
@@ -364,30 +341,12 @@ public class DConnect {
    * @exception DASException on an error constructing the DAS
    * @exception DODSException if an error returned by the remote server
    */
-  public DAS getDAS()
-      throws MalformedURLException, IOException, ParseException, DASException, DODSException {
-    return getDAS(-1);
-  }
-
-  // bob simons added this variant:
-
-  /**
-   * Returns the DAS object from the dataset referenced by this object's URL. The DAS object is
-   * referred to by appending `.das' to the end of a DODS URL.
-   *
-   * @return the DAS associated with the referenced dataset.
-   * @exception MalformedURLException if the URL given to the constructor has an error
-   * @exception IOException if an error connecting to the remote server
-   * @exception ParseException if the DAS parser returned an error
-   * @exception DASException on an error constructing the DAS
-   * @exception DODSException if an error returned by the remote server
-   */
   public DAS getDAS(int timeOutMillis)
       throws MalformedURLException, IOException, ParseException, DASException, DODSException {
     InputStream is;
     if (fileStream != null) is = parseMime(fileStream);
     else { // String2.log(">> DConnect.getDAS: " + urlString + ".das" + projString + selString);
-      URL url = new URL(urlString + ".das" + projString + selString);
+      URL url = URI.create(urlString + ".das" + projString + selString).toURL();
       boolean dumpDAS = false;
       if (dumpDAS) {
         String2.log("--DConnect.getDAS to " + url);
@@ -423,30 +382,12 @@ public class DConnect {
    * @exception DDSException on an error constructing the DDS
    * @exception DODSException if an error returned by the remote server
    */
-  public DDS getDDS()
-      throws MalformedURLException, IOException, ParseException, DDSException, DODSException {
-    return getDDS(-1);
-  }
-
-  // bob simons added this variant:
-
-  /**
-   * Returns the DDS object from the dataset referenced by this object's URL. The DDS object is
-   * referred to by appending `.dds' to the end of a DODS URL.
-   *
-   * @return the DDS associated with the referenced dataset.
-   * @exception MalformedURLException if the URL given to the constructor has an error
-   * @exception IOException if an error connecting to the remote server
-   * @exception ParseException if the DDS parser returned an error
-   * @exception DDSException on an error constructing the DDS
-   * @exception DODSException if an error returned by the remote server
-   */
   public DDS getDDS(int timeOutMillis)
       throws MalformedURLException, IOException, ParseException, DDSException, DODSException {
     InputStream is;
     if (fileStream != null) is = parseMime(fileStream);
     else {
-      URL url = new URL(urlString + ".dds" + projString + selString);
+      URL url = URI.create(urlString + ".dds" + projString + selString).toURL();
       is = openConnection(url, timeOutMillis); // bob simons added
     }
     DDS dds = new DDS();
@@ -501,7 +442,8 @@ public class DConnect {
       localSelString = "";
     }
     URL url =
-        new URL(urlString + ".dods" + projString + localProjString + selString + localSelString);
+        URI.create(urlString + ".dods" + projString + localProjString + selString + localSelString)
+            .toURL();
 
     String errorMsg = "DConnect getData failed " + url;
     int errorCode = DODSException.UNKNOWN_ERROR;
@@ -713,15 +655,6 @@ public class DConnect {
   }
 
   /**
-   * Returns the <code>ServerVersion</code> of the last connection.
-   *
-   * @return the <code>ServerVersion</code> of the last connection.
-   */
-  public final ServerVersion getServerVersion() {
-    return ver;
-  }
-
-  /**
    * A primitive parser for the MIME headers used by DODS. This is used when reading from local
    * sources of DODS Data objects. It is called by <code>readData</code> to simulate the important
    * actions of the <code>URLConnection</code> MIME header parsing performed in <code>openConnection
@@ -753,8 +686,8 @@ public class DConnect {
     String encoding = null;
 
     // while there are more header (non-blank) lines
-    String line;
-    while (!(line = d.readLine()).isEmpty()) {
+    String line = d.readLine();
+    while (!line.isEmpty()) {
       int spaceIndex = line.indexOf(' ');
       // all header lines should have a space in them, but if not, skip ahead
       if (spaceIndex == -1) continue;
@@ -766,6 +699,7 @@ public class DConnect {
         case "Content-Description:" -> description = value;
         case "Content-Encoding:" -> encoding = value;
       }
+      line = d.readLine();
     }
     handleContentDesc(is, description);
     return handleContentEncoding(is, encoding);
